// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with all the default props 1`] = `
.c6 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c6 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .sc-AxhCb {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c3 {
  position: relative;
  width: 18px;
  height: 18px;
  border-radius: 15%;
  border: 1px solid #13181D;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c5 * {
  fill: #13181D;
}

.c3:hover {
  border: 1px solid #1A6BF0;
  background-color: #ffffff;
}

.c1 label {
  color: #13181D;
}

.c1:hover .c2 {
  border: 1px solid #1A6BF0;
}

.c4 {
  opacity: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0;
  cursor: pointer;
}

.c4 + .c5 {
  z-index: 1;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c4:focus {
  outline: none;
}

.c4:checked + .c5 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

<div>
  <div
    class="c0 c1"
    id="-checkbox"
  >
    
    <div
      class="c2 c3"
      data-testid="checkbox-wrapper"
    >
      <input
        class="c4"
        id=""
        name="gender"
        type="checkbox"
      />
      <svg
        class="c5 c6"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Checkbox component should render correctly with all the props given 1`] = `
.c8 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 2.0rem;
  cursor: not-allowed;
}

.c3 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c0 .sc-AxhCb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 {
  position: relative;
  width: 22px;
  height: 22px;
  border-radius: 15%;
  border: 1px solid #13181D;
  background-color: #ffffff;
  border: 1px solid #98A7B7;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c7 * {
  fill: #13181D;
}

.c5:hover {
  border: 1px solid #98A7B7;
  background-color: #ffffff;
}

.c5 .c7 * {
  fill: #98A7B7;
}

.c1 label {
  color: #98A7B7;
}

.c1:hover .c4 {
  border: 1px solid #98A7B7;
}

.c6 {
  opacity: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0;
  cursor: not-allowed;
}

.c6 + .c7 {
  z-index: 1;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c6:focus {
  outline: none;
}

.c6:checked + .c7 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

<div>
  <div
    class="c0 c1"
    disabled=""
    id="Female-checkbox"
  >
    <label
      class="c2 c3"
      for="Female"
    >
      Female
    </label>
    <div
      class="c4 c5"
      data-testid="checkbox-wrapper"
      disabled=""
    >
      <input
        class="c6"
        disabled=""
        id="Female"
        name="gender"
        type="checkbox"
      />
      <svg
        class="c7 c8"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;
